--- a/NerdHerd/stil.css
+++ b/NerdHerd/stil.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black
+  background-color: black;
 }
 
 .stranica  {
@@ -19,11 +19,12 @@ body {
   margin: auto;
   padding: 0;
   float:left;
-  height:40%;
+  height:30%;
 }
 
 .slika{
   width:100%;
+height: 100%;
   margin: auto;
   padding: 0;
   float:left;
@@ -93,8 +94,43 @@ padding-left: 4%;
 .navigacija li a:visited { color: silver; text-decoration: none;}
 .navigacija li a:active { color: silver; text-decoration: none;}
 
+@media only screen and (max-device-width:700px){
+     ul.navigacija {position: relative;}
 
-@media screen and (max-width:600px) {
+  ul.navigacija li {
+    float: none;
+    display: inline;
+    font-size: 100%;
+    padding:0;
+    margin: 0;
+    text-align: center;
+
+  }
+  .navigacija li:hover {
+    text-decoration: none;
+  }
+  ul.navigacija li a {
+    display: block;
+  }
+  div.bigel>a,h2,img
+  {
+    font-size: 0.2em;
+  }
+  div.element>a,h2,img
+  {
+    font-size: 0.2em;
+  }
+  div.tekstrev>h2
+  {
+    font-size: 80%;
+  }
+  div.tekstrev>p
+  {
+    font-size: 80%;
+  }
+    }
+
+@media screen and (max-width: 700px){
   ul.navigacija {position: relative;}
 
   ul.navigacija li {
@@ -265,7 +301,7 @@ padding-left: 4%;
   float:left;
   margin: 0;
   padding: 2%;
-  padding-top: 5%
+  padding-top: 5%;
   border: 0;
   height: 30%;
 }
