--- a/NerdHerd/stil.css
+++ b/NerdHerd/stil.css
@@ -480,7 +480,23 @@ body {
     padding: 0;
     border: 0;
 }
-
+.unosrev>ul{
+    display: none;
+    background-color: #996699;
+    width: 96%;
+    margin: 0;
+    padding: 2%;
+    border: 0;
+    text-align: justify;
+    list-style: none;
+}
+.unosrev>ul li{
+    font-size: 110%;
+    font-weight: bold;
+    text-decoration: none;
+    color: #421C52;
+    width: 100%;
+}
 .unosrev>label {
     display: block;
     font-size: 150%;
@@ -559,17 +575,9 @@ body {
     font-size: 105%;
     font-family: 'Noto Serif';
     color: #421C52;
-    width: 70%;
+    width: 100%;
 }
 
-.uploadbutton {
-    margin-top: 1%;
-    margin-bottom: 1%;
-    float: right;
-    font-size: 105%;
-    font-family: 'Noto Serif';
-    color: #421C52;
-}
 
 .dodkont {
     font-family: 'Noto Serif';
@@ -591,7 +599,23 @@ body {
     padding: 0;
     border: 0;
 }
-
+.unoskont>ul{
+    display: none;
+    background-color: #996699;
+    width: 96%;
+    margin: 0;
+    padding: 2%;
+    border: 0;
+    text-align: justify;
+    list-style: none;
+}
+.unoskont>ul li{
+    font-size: 110%;
+    font-weight: bold;
+    text-decoration: none;
+    color: #421C52;
+    width: 100%;
+}
 .unoskont>label {
     display: block;
     margin-top: 3%;
@@ -730,7 +754,23 @@ body {
     padding: 0;
     border: 0;
 }
-
+.unoskoment>ul{
+    display: none;
+    background-color: #996699;
+    width: 96%;
+    margin: 0;
+    padding: 2%;
+    border: 0;
+    text-align: justify;
+    list-style: none;
+}
+.unoskoment>ul li{
+    font-size: 110%;
+    font-weight: bold;
+    text-decoration: none;
+    color: #421C52;
+    width: 100%;
+}
 .unoskoment>label {
     display: block;
     font-size: 150%;
